# AIM-Framework

./: .gitignore  README.md  dashboard.bat  enhanced_simulation.py  generate_figures.py  live_ran_corpus.csv  main.py  pyproject.toml  requirements.txt  requirements_dashboard.txt  run_simu5g_parallel.py  simu5g_simulation.py  test_aimp_integration.py  test_aimp_real_simu5g.py
scripts/: ablation_run.py  baseline_compare.py  bias_floor_sweep.py  generate_ablation_figure.py  generate_baseline_figure.py  generate_bias_floor_figure.py  measure_overhead.py  repro_audit_dump_telemetry.py  repro_audit_visual_diff.py  wilcoxon_effects.py
src/aif/: aif.py  audit.py  buffers.py  dpostp.py  event_log.py  golden_corpus.py  input_validation.py  signals.py
src/aimp/: __init__.py  aimp.py  mtpc.py  rtpc.py
src/atm/: atm.py  mtp_c.py  mtp_e.py  mtp_l.py
src/baselines/: __init__.py  adwin.py  clean_label_attack.py  cusum_class_prior.py  spectral_signatures.py
src/dashboard/: app.py  simulation_runner.py
src/dashboard/live/: __init__.py  __main__.py  _ws_probe.py  engine.py  manual_walkthrough.ps1  multi_mode_driver.py  ran_actuator.py  ran_simulator.py  safety.py  server.py  sinr_drift_demo.py  smoke_test.py  web_smoke_test.py
src/detectors/: cdd.py  cpd.py  ddd.py  dpd.py  reset.py
src/ndt/: ndt.py
src/rtp/: rtp.py
src/sim_parser/: build_real_kpi_csvs.py
src/simu5g/: __init__.py  adapter.py  generator.py  parser.py
src/simu5g/results/: simu5g_real_simulation_results.csv  simu5g_real_summary.csv  simu5g_results.csv  simu5g_summary.csv
tests/: conftest.py
tests/integration/: __init__.py  _harness.py  test_aif_atomicity_and_states.py  test_buffer_concurrency.py  test_cpd_golden_corpus.py  test_detector_reset_on_rollback.py  test_e2e_scenarios.py  test_event_log_tamper.py  test_event_taxonomy_wiring.py  test_input_validation.py  test_ran_actuator_loop.py  test_retraining.py  test_retraining_gaps.py  test_slow_poisoning.py
tests/unit/: _helpers.py  test_atm_select.py  test_cdd.py  test_cpd.py  test_ddd.py  test_dpd.py  test_dpostp.py  test_ndt.py
thesis_figures/: gen_arch.py  generate_eval_figures.py  regenerate_evaluation.py
(+5 files in other folders)
