[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtp-observer"
version = "1.0.0"
description = "Reference implementation of the AI Management Platform (AIMP) for AI-Native 5G/6G Networks"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "Taieb Fourati", email = "taieb.fourati27@gmail.com" }
]
keywords = [
    "5g",
    "6g",
    "ai-management",
    "drift-detection",
    "digital-twin",
    "ran",
    "machine-learning",
    "mlops",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "matplotlib>=3.7.0",
    "plotly>=5.20.0",
    "pillow>=10.0.0",
    "mlflow>=2.10.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.32.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "websockets>=12.0",
]
test = [
    "pytest>=8.0.0",
]
dev = [
    "pytest>=8.0.0",
    "streamlit>=1.32.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/taiebfourati/AIM-Framework"
Repository = "https://github.com/taiebfourati/AIM-Framework"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "aif*",
    "aimp*",
    "atm*",
    "baselines*",
    "dashboard*",
    "detectors*",
    "ndt*",
    "rtp*",
    "sim_parser*",
    "simu5g*",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "test_aimp_integration.py", "test_aimp_real_simu5g.py"]
python_files = ["test_*.py"]
addopts = "-v"
